[gd_scene load_steps=6 format=3 uid="uid://cwfcggs6mt4nu"]

[ext_resource type="Texture2D" uid="uid://w65ylgqfg6yh" path="res://Player/Player.png" id="1_eujwm"]
[ext_resource type="Script" path="res://Player/player.gd" id="1_f5yfs"]
[ext_resource type="Texture2D" uid="uid://dkvww8cfin8aj" path="res://Light/light.png" id="3_8f2cx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jwrcw"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dttoo"]
size = Vector2(18, 18)

[node name="Player" type="CharacterBody2D"]
collision_mask = 24
script = ExtResource("1_f5yfs")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_eujwm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jwrcw")

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.584314, 0.882353, 1, 1)
energy = 0.5
shadow_enabled = true
shadow_filter_smooth = 1.0
texture = ExtResource("3_8f2cx")
texture_scale = 2.0

[node name="HitBox" type="Area2D" parent="."]
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_dttoo")

[node name="FireDelay" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="timeout" from="FireDelay" to="." method="_on_fire_delay_timeout"]
